Eyedrop tool is inconsistant #46222

Closed
opened 2015-09-23 11:22:21 +02:00 by Carlo Andreacchio · 6 comments

System Information
Windows 7 x64 GTX580

Blender Version
Broken: cfc109e

Short description of error
Eyedrop tool is inconsistant

Exact steps for others to reproduce the error

  1. Open attached blend file
  2. on the shrinkwrap, click the eyedrop tool button for the target
  3. move mouse over to the greasepencil box, and move around
  4. notice how it is picking up objects behind Plane.112
  5. move mouse around until Plane.112 is in the tooltip
  6. click
  7. 50% of the time it is not plane.112 that it picks

eyedroptoolbug.blend

**System Information** Windows 7 x64 GTX580 **Blender Version** Broken: cfc109e **Short description of error** Eyedrop tool is inconsistant **Exact steps for others to reproduce the error** 1. Open attached blend file 2. on the shrinkwrap, click the eyedrop tool button for the target 3. move mouse over to the greasepencil box, and move around 4. notice how it is picking up objects behind Plane.112 5. move mouse around until Plane.112 is in the tooltip 6. click 7. 50% of the time it is not plane.112 that it picks [eyedroptoolbug.blend](https://archive.blender.org/developer/F237741/eyedroptoolbug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscribers: @ideasman42, @Sergey

Added subscribers: @ideasman42, @Sergey

Can confirm the issue. @ideasman42, afair it's feature from you, mind having a look? :)

Can confirm the issue. @ideasman42, afair it's feature from you, mind having a look? :)
Campbell Barton was assigned by Sergey Sharybin 2015-09-23 12:25:18 +02:00

This issue was referenced by d0a2a8086c

This issue was referenced by d0a2a8086c1b0002f7105eeec3cd3e5fb5691fb4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46222
No description provided.