Fix T46222: Eyedrop picking objects inconsistently